:bug: fix swagger bugs
修复 swagger 接口问题
