# server/docs/swagger.json
@@ -49,7 +49,12 @@
             }
         },
         "/api/v1/user/logout": {
-            "get": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -81,6 +86,13 @@
                     "example": "admin"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "x-token",
+            "in": "header"
         }
     }
 }
