# server/main.go
@@ -18,6 +18,10 @@ import (
 // @license.name Apache 2.0
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name x-token
+
 // @host localhost:8080
 // @BasePath /
 func main() {
